--- a/Styles/index.css
+++ b/Styles/index.css
@@ -40,24 +40,24 @@ body {
 }
 
 .Titan {
-  background-image: url("/Ricochet_Rumbles/Assets/Titan.png");
+  background-image: url("/Assets/Titan.png");
   background-size: cover;
 }
 .Tank {
-  background-image: url("/Ricochet_Rumbles/Assets/Tank.png");
+  background-image: url("/Assets/Tank.png");
   background-size: cover;
 }
 .Cannon {
-  background-image: url("/Ricochet_Rumbles/Assets/Cannon.png");
+  background-image: url("/Assets/Cannon.png");
   background-size: cover;
 }
 
 .Ricochet {
-  background-image: url("/Ricochet_Rumbles/Assets/Ricochet.png");
+  background-image: url("/Assets/Ricochet.png");
   background-size: cover;
 }
 .SemiRicochet {
-  background-image: url("/Ricochet_Rumbles/Assets/SemiRicochet.png");
+  background-image: url("/Assets/SemiRicochet.png");
   background-size: cover;
 }
 
@@ -117,18 +117,18 @@ body {
 }
 
 .bullet {
-  background-image: url("/Ricochet_Rumbles/Assets/Bullet.png");
+  background-image: url("/Assets/Bullet.png");
   background-size: cover;
   width: 100%;
   height: 100%;
 }
 
 .bullet_top {
-  transform: rotateZ(108deg);
+  transform: rotateZ(180deg);
 }
 .bullet_left {
-  transform: rotateZ(90deg);
+  transform: rotateZ(-90deg);
 }
 .bullet_right {
-  transform: rotateZ(-90deg);
+  transform: rotateZ(90deg);
 }
