--- a/Styles/index.css
+++ b/Styles/index.css
@@ -68,6 +68,17 @@ body {
   border: blue 1px solid;
 }
 
+.heading {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+#timer {
+  color: beige;
+  font-size: 24px;
+  margin-top: 8px;
+}
 .turnCard {
   color: white;
 }
