--- a/Styles/settings.css
+++ b/Styles/settings.css
@@ -27,6 +27,9 @@ body {
   width: 40%;
   backdrop-filter: saturate(180%) blur(8px);
   border-radius: 20px;
+  @media only screen and (max-width: 730px) {
+    width: 80%;
+  }
 }
 
 input {
