--- a/Styles/index.css
+++ b/Styles/index.css
@@ -353,17 +353,17 @@ body {
 
 @keyframes goThruKF {
   from {
-    background-color: blue;
+    background-color: rgb(52, 82, 234, 0.5);
   }
 }
 @keyframes destroyKF {
   from {
-    background-color: red;
+    background-color: rgb(235, 63, 52, 0.5);
   }
 }
 @keyframes shieldKF {
   from {
-    background-color: yellow;
+    background-color: rgb(235, 164, 52, 0.5);
   }
 }
 
